# codespaces-flask

./: Dockerfile  README.md  app.py  deploy.yaml  devfile.yaml  devfile.yml  pyproject.toml  requirements.txt
docker/: Dockerfile
jfk_payments/: orders.py
jfkpay/: app.py  config.py  gservices.py  gsheet.py  model.py  orders.py  views.py
jfkpay/static/: gpay.js  main.css
jfkpay/templates/: index.html  payment.html  payment_complete.html  payment_gateway.html
static/: gpay.js
templates/: index.html  payment.html
tests/: test_orders.py
