[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jfkpay"
version = "2024.0.0"
dependencies = [
    "flask==2.3.2",
    "qrcode==7.4.2",
    "qrplatba==1.1.1",
    "lxml",

    "google-api-python-client==2.113.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.0"
]
requires-python = ">=3.8"
authors = [
  {name = "Jaroslav Henner", email = "jaroslav.henner@gmail.com"},
]
maintainers = [
  {name = "Jaroslav Henner", email = "jaroslav.henner@gmail.com"}
]
description = "QRcode voucher payment system."
readme = "README.md"
#license = {file = "LICENSE.txt"}
#keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
jfk_orders = "jfkpay.orders:main"
jfk_sheet = "jfkpay.gsheet:main"